# calligraphy-nib-mcp

./: README.md  pyproject.toml
src/calligraphy_nib_mcp/: calligraphy_nib_mcp.py
