[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calligraphy-nib-mcp"
version = "1.0.0"
description = "Calligraphy nib visual vocabulary MCP server for deterministic nib→visual parameter mapping"
authors = [
    {name = "Lushy", email = "dal@lushy.app"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[tool.setuptools]
packages = []
